# dosis

./: .gitignore  AUTHORS  BUGS  ChangeLog  Makefile.am  README  THANKS  TODO  configure.in  reconf
doc/: Diagrama1.dia  Dosis-SCG-2009.odp  grafico.xcf
doc/man/: README  dosis.1.in
include/: Makefile.am  autoconfig.h.in  config.h  memory.h
src/: Makefile  Makefile.am  Makefile.in
src/dosis/: .gitignore  Makefile.am  dosconfig.c  dosconfig.h  dosis.c  dosis.h  dosis.splintrc  exec.c  exec.h  hash.c  hash.h  help.c  help.h  ip.c  ip.h  ipqex.c  ipqex.h  iptables.c  iptables.h  listener.c  listener.h  lnet.c  lnet.h  log.c  log.h  mqueue.c  mqueue.h  payload.c  payload.h  pthreadex.c  pthreadex.h  random.c  script.h  script.y  sslthread.c  sslthread.h  tcp.c  tcpopen.c  tcpopen.h  tcpraw.c  (+7 more)
src/dosis/.deps/: dosis.Po  ipqex.Po  log.Po  pthreadex.Po  tcpopen.Po  tea.Po
src/dosis/pills/: ignorer.c  ignorer.h  listener.c  listener.h  sender.c  sender.h  slowy.c  slowy.h  tcp.c  tcp.h  tcpopen.c  tcpopen.h  tcpraw.c  tcpraw.h  tcpssl.c  udp.c  udp.h
src/scripts/: http.inj  https.inj  synflood.inj  tcpopen.inj  tcpopen.payload  udpflood.inj  zerowin.inj
